--- a/packages/service-contracts/package.json
+++ b/packages/service-contracts/package.json
@@ -7,7 +7,8 @@
     "watch": "nodemon",
     "build": "yarn clean && yarn compile",
     "clean": "rm -rf ./dist",
-    "compile": "tsc -p tsconfig.build.json"
+    "compile": "tsc -p tsconfig.build.json",
+    "rover-dev": "npx --yes -p @apollo/rover rover dev --name contracts --schema src/schema.gql --url http://localhost:4001/graphql"
   },
   "dependencies": {
     "@workshop/util-sequelize": "*",
